[version "0.1.5"]
date = Fri Sep 23 02:42:26 PM EDT 2022
done = Refactor to new bpan config schema

[version "0.1.4"]
date = Wed Sep 14 09:46:04 AM EDT 2022
done = Update BPAN assets

[version "0.1.3"]
date = Sun Sep 11 01:53:46 PM EDT 2022
done = Various updates
done = Add perl publish support
done = Use `pwd -d` instead of `$PWD` for current dir

[version "0.1.2"]
  date = Tue 23 Aug 2022 11:11:42 AM PDT
  done = Add bpan as Bash's package manager

[version "0.1.1"]
  date = Tue 23 Aug 2022 06:29:54 AM PDT
  done = Convert to use BPAN for bash dependencies
  done = Support subcommand options

[version "0.1.0"]
  date = Sat 13 Aug 2022 12:21:50 PM PDT
  done = Initial release