@@ -1,107 +1,27 @@
-include Config.mk
+SHELL := bash
 
-DOCKER_TAG := $(PST_VERSION)
-DOCKER_IMAGE := $(DOCKER_USER)/$(DOCKER_NAME):$(DOCKER_TAG)
-
-DOCKER_LANGUAGES := $(LANGUAGES:%=src/%)
-
-# DOCKER_BUILD_ARGS += \
-#     --build-arg http_proxy=http://squid-deb-proxy:8000 \
-#     --network squid \
-
-ifdef NOCACHE
-DOCKER_BUILD_ARGS += --no-cache
+ifndef BPAN_ROOT
+$(info BPAN_ROOT variable not set)
+$(info Makefile requires BPAN to be installed)
+$(info See: https://github.com/bpan-org/bpan)
+$(error ERROR)
 endif
 
-DOCKER_MAIN_BUILD_ARGS += \
-    $(DOCKER_BUILD_ARGS) \
-    --build-arg BASE_NAME=$(DOCKER_USER)/$(DOCKER_NAME) \
-    --build-arg BASE_IMAGE=$(IMAGE_BASE) \
+BPAN_CMDS := $(shell bpan -q cmds | grep -v test)
+
+o ?=
+test ?= test/
 
 
-BMAKE := $(MAKE) -f $(ROOT)/Build.mk --no-print-directory
-BMAKE := $(MAKE) -f $(ROOT)/Build.mk
+default::
 
-SHELLS := $(LANGUAGES:%=shell-%)
-
-#------------------------------------------------------------------------------
-default:
-
-add-lang:
-	@[[ "$L" ]] || { \
-	    echo 'Usage: make $@ L=<language-name-slug>'; \
-	    exit 1; \
-	}
-	( \
-	    set -ex; \
-	    cp -Ppr lib/lang src/$L; \
-	    vim Languages src/$L/* lib/main/Dockerfile -O \
-	)
-
-force:
-	rm -fr $(BUILT)
-
-purge: force
-	docker images | \
-	    grep ^$(app) | \
-	    awk '{print $$1 ":" $$2}' | \
-	    xargs docker rmi -f || true
-
-update: meta-update
-
-meta-update:
-	$(ROOT)/lib/tool/bin/meta-update
-
-# build: proxy-up lib/base $(DOCKER_LANGUAGES) lib/main proxy-down
-build: lib/base $(DOCKER_LANGUAGES) lib/main
+$(BPAN_CMDS)::
+	bpan $@ $o
 
 .PHONY: test
-test:
-	bpan $@
+test::
+	prove -v $(test)
 
-clean:
-	rm -fr target
-
-push: build
-	docker push $(DOCKER_IMAGE)
-
-shell-%: src/%
-	touch $(BASH_HISTORY)
-	$(BMAKE) -C $< shell
-
-$(DIRS):
-	mkdir -p $@
-
-lib/base $(DOCKER_LANGUAGES): always
-	$(BMAKE) -C $@ build \
-	    DOCKER_BUILD_ARGS='$(DOCKER_BUILD_ARGS)'
-
-lib/main: always
-	$(BMAKE) -C $@ build \
-	    DOCKER_BUILD_ARGS='$(DOCKER_MAIN_BUILD_ARGS)'
-
-always:
-
-# See: https://gist.github.com/reegnz/990d0b01b5f5e8670f78257875d8daa8
-# This approach failed but might be able to fix it later.
-proxy-up: proxy-build
-	-docker kill squid-deb-proxy
-	rm -f proxy-id
-	docker run --rm -d --network squid \
-	    --volume squid-deb-proxy:/data \
-	    --name squid-deb-proxy \
-	    $(DOCKER_USER)/squid-deb-proxy
-
-proxy-down:
-	-docker kill squid-deb-proxy
-	rm -f proxy-id
-
-proxy-build:
-	( \
-	    cd lib/proxy; \
-	    docker build \
-		-t $(DOCKER_USER)/squid-deb-proxy \
-		. \
-	)
-	-docker volume create squid-deb-proxy
-	-docker network create squid
+ifneq (,$(wildcard .bpan/local.mk))
+include .bpan/local.mk
+endif
