@@ -1,3 +1,7 @@
+[version "0.1.6"]
+date = Fri Sep 23 02:59:22 PM EDT 2022
+done = Fix Makefile issues
+
 [version "0.1.5"]
 date = Fri Sep 23 02:42:26 PM EDT 2022
 done = Refactor to new bpan config schema
